# BevyFightingGame

./: Cargo.toml
assets/: d.txt
assets/tilemap/: hills.ldtk
src/: main.rs
src/common/: components.rs  mod.rs  movement.rs  sprite.rs
src/enemy/: mod.rs
src/enemy/slime/: collision.rs  mod.rs  movement.rs  spawn.rs  sprite.rs  state.rs
src/neutral/: mod.rs
src/neutral/koala/: mod.rs  sprite.rs  state.rs
src/player/: collision.rs  events.rs  input.rs  mod.rs  movement.rs  spawn.rs  spells.rs  sprite.rs  state.rs
src/player/spells/: spray_fire.rs
src/systems/: bloom.rs  draw_cursor.rs  hello_plugin.rs  pixel_grid_snap.rs  shapes.rs  sprite_animation.rs  sprite_movement.rs  volume_intersections_2d.rs
src/ui/: game_timer.rs  health.rs  main_menu.rs  mod.rs  spells.rs
src/world/: camera.rs  game.rs  map.rs  mod.rs
