[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking"] }
bevy_hanabi = { version = "0.11", default-features = true }
bevy_math = "0.13.2"
bevy_rapier2d = "0.26.0"
iyes_perf_ui = "0.2.3"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
