[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.26"
bevy_color = "0.14.3"
bevy_ecs_ldtk = "0.10"
bevy_hanabi = { version = "0.12", default-features = true }
bevy_math = "0.14.2"
bevy_rapier2d = "0.27.0"
iyes_perf_ui = "0.3"
rand = "0.8.5"

[patch.crates-io]
# Patch unstable version to resolve conflicting dependencies from bevy_ecs_ldtk
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
